--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "typecheck": "tsc --noEmit",
     "dev": "parcel --port 8080 --hmr-port 5010 ./src/index.html",
-    "build": "parcel build ./src/index.html",
+    "build": "parcel build ./src/index.html --experimental-scope-hoisting",
     "parcel": "parcel",
     "tsc": "tsc"
   },
@@ -21,10 +21,20 @@
   },
   "homepage": "https://github.com/ncthbrt/webgl-messabout#readme",
   "devDependencies": {
+    "@types/gl-matrix": "^2.4.5",
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.1",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "parcel-plugin-compress": "^1.1.0",
+    "parcel-plugin-static-files-copy": "^2.3.1",
+    "sass": "^1.26.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "preact": "^10.3.4"
+    "gl-matrix": "^3.2.1",
+    "preact": "^10.3.4",
+    "regenerator-runtime": "^0.13.5",
+    "ts-polyfill": "^3.8.2"
   }
 }
