--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gl-matrix": "^3.2.1",
     "preact": "^10.3.4",
     "regenerator-runtime": "^0.13.5",
-    "ts-polyfill": "^3.8.2"
+    "ts-polyfill": "^3.8.2",
+    "webgl-obj-loader": "^2.0.6"
   }
 }
